--- a/src/containers/TopicsScreen.css
+++ b/src/containers/TopicsScreen.css
@@ -1,3 +1,4 @@
+
 .TopicsScreen {
   padding: 20px;
 }
@@ -13,5 +14,19 @@
 .TopicsScreen li {
   text-align: left;
   border-bottom: 1px solid #aaa;
+  cursor: pointer;
+}
+
+.TopicsScreen li > div {
   padding-left: 20px;
+}
+
+.TopicsScreen li h3 {
+  padding: 10px 0 0 0;
+  margin: 0;
+}
+
+.TopicsScreen li p {
+  padding: 10px 0;
+  margin: 0;
 }
