Adicionando suporte para arquivos nos css

--- a/src/containers/TopicsScreen.css
+++ b/src/containers/TopicsScreen.css
@@ -1,4 +1,3 @@
-
 .TopicsScreen {
   padding: 20px;
 }
@@ -29,4 +28,17 @@
 .TopicsScreen li p {
   padding: 10px 0;
   margin: 0;
+}
+
+.NextScreen {
+  position: fixed;
+  top: 50%;
+  right: calc((100vw - 640px)/2 - 90px);
+  background: url('/img/right_arrow.png');
+  background-size: 80px 80px;
+  width: 80px;
+  height: 80px;
+  border: 0;
+  cursor: pointer;
+  outline: none;
 }
